name:                FractalDrawings
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/mdtusz/FractalDrawings#readme
license:             BSD3
license-file:        LICENSE
author:              Miklós Tusz
maintainer:          mdtusz@gmail.com
copyright:           2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , diagrams-lib
                     --, diagrams-html5
                     , diagrams-svg
  default-language:    Haskell2010

executable FractalDrawings-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FractalDrawings
                     --, diagrams-html5
                     , diagrams-svg
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mdtusz/FractalDrawings
